# Federated-Machine-Learning

./: README.md  pyproject.toml  results_clients_participation.py  results_clients_seeds.py  results_clients_seeds_nonIID.py  run_noniid_labelgroups.py
app_research_project/: __init__.py  client_app.py  server_app.py
python configurations/: results_clients_seeds_LOWalpha.py  results_clients_withoutSEEDS.py
python plotting/: plot_results.py  plot_results_NONIIDS.py  plot_results_client_participation.py  plot_results_clients_seeds.py
results/: results.json  results_clients_classes_NonIID.csv  results_clients_participation_rounds_20251030_003543.csv  results_clients_participation_summary_20251030_003543.csv  results_clients_seeds_rounds_0.1.csv  results_clients_seeds_rounds_1.0.csv  results_clients_seeds_rounds_10.0.csv  results_clients_seeds_summary_0.1.csv  results_clients_seeds_summary_1.0.csv  results_clients_seeds_summary_10.0.csv  results_clients_withoutSEEDS.csv  results_noniid_labelgroups_classes_debug.csv  results_noniid_labelgroups_rounds.csv  results_noniid_labelgroups_rounds_debug.csv  results_noniid_labelgroups_summary.csv  results_noniid_labelgroups_summary_debug.csv  results_rounds_withoutSEEDS.csv
